[package]
name = "sunrays_seedy"
version = "1.0.0"
edition = "2021"

[dependencies]
solana-client = "1.14.17"
solana-sdk = "1.14.17"
solana-account-decoder = "1.14.17"
anyhow = "1.0"
aes-gcm = "0.10"
aes-gcm-siv = "0.10"
argon2 = "0.4"
rand = "0.8"
rand_core = "0.6"
rpassword = "7.0"
reqwest = "0.11"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

solana-remote-wallet = "1.14.17"
