
[package]
name = "sunrays_seedy"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aes-gcm-siv = "0.10"
argon2 = "0.4"
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3"
zeroize = "1.8"

tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }

# For the custom RPC client over Tor:
reqwest = "0.11"

# Solana (nonblocking) client/libraries
solana-client = { version = "2.1.10" }
solana-sdk = "2.1.10"
solana-account-decoder = "2.1.10"

# Arti for embedded Tor
arti = "1.3"
arti-client = "0.26.0"
