[package]
name = "sunrays_seedy"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aes-gcm-siv = "0.10"
argon2 = "0.4"
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3"
zeroize = "1.8"
aes-gcm = "0.10.3"
aead = "0.5.2"
async-trait = "0.1.85"
toml = "0.8.19"
spl-token = "7.0.0"
solana-program-pack = "2.1.10"
solscan-api = "0.1.2"
bs58 = "0.5.1"
tor-rtcompat = { version = "0.26.0", features = ["tokio", "native-tls"] }

tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }

# For the custom RPC client over Tor:
reqwest = { version = "0.11", features = ["socks"] }

# Solana (nonblocking) client/libraries
solana-client = { version = "2.1.10" }
solana-sdk = "2.1.10"
solana-account-decoder = "2.1.10"

# Arti for embedded Tor
arti = { version = "1.3.2" }
arti-client = { version = "0.26.0", features = ["tokio", "native-tls"] }
